--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
   "name": "as-gastronomico-backend",
   "version": "1.0.0",
-  "description": "Backend API para As Gastronómico App",
+  "description": "Backend API for As Gastronomico App",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "start:local": "node server-local.js",
-    "dev": "nodemon server.js",
-    "dev:local": "nodemon server-local.js"
+    "dev": "node server-local.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "sqlite3": "^5.1.7"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "cors": "^2.8.5",
+    "pg": "^8.11.3"
   },
   "engines": {
-    "node": ">=18.0.0"
-  }
+    "node": "20.11.0"
+  },
+  "keywords": ["api", "restaurant", "management"],
+  "author": "As Gastronomico",
+  "license": "MIT"
 }
